crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@49.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select textmultirange(textrange('a', 'c'));"
---
SelectStmt@0..43
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..40
    FuncCall@7..40
      Ident@7..21 "textmultirange"
      Ascii40@21..22 "("
      FuncCall@22..40
        Ident@22..31 "textrange"
        Ascii40@31..32 "("
        AConst@32..35
          Sconst@32..35 "'a'"
        Ascii44@35..36 ","
        Whitespace@36..37 " "
        AConst@37..40
          Sconst@37..40 "'c'"
  Ascii41@40..41 ")"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

