crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{,[a,c)}'::textmultirange;"
---
SelectStmt@0..34
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..33
    TypeCast@7..33
      AConst@7..17
        Sconst@7..17 "'{,[a,c)}'"
      Typecast@17..19 "::"
      TypeName@19..33
        Ident@19..33 "textmultirange"
  Ascii59@33..34 ";"

