crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@502.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table float8multirange_test(f8mr float8multirange, i int);"
---
CreateStmt@0..65
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..34
    Ident@13..34 "float8multirange_test"
  Ascii40@34..35 "("
  ColumnDef@35..56
    Ident@35..39 "f8mr"
    Whitespace@39..40 " "
    TypeName@40..56
      Ident@40..56 "float8multirange"
  Ascii44@56..57 ","
  Whitespace@57..58 " "
  ColumnDef@58..63
    Ident@58..59 "i"
    Whitespace@59..60 " "
    TypeName@60..63
      IntP@60..63 "int"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

