crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@504.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select * from float8multirange_test;
---
SelectStmt@0..36
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..35
    Ident@14..35 "float8multirange_test"
  Ascii59@35..36 ";"

