crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@507.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create type mydomainrange as range(subtype=mydomain);
---
CreateRangeStmt@0..53
  Create@0..6 "create"
  Whitespace@6..7 " "
  TypeP@7..11 "type"
  Whitespace@11..12 " "
  Ident@12..25 "mydomainrange"
  Whitespace@25..26 " "
  As@26..28 "as"
  Whitespace@28..29 " "
  Range@29..34 "range"
  Ascii40@34..35 "("
  DefElem@35..51
    Ident@35..42 "subtype"
    Ascii61@42..43 "="
    TypeName@43..51
      Ident@43..51 "mydomain"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

