crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@508.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{[4,50)}'::mydomainmultirange @> 7::mydomain;"
---
SelectStmt@0..53
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..52
    AExpr@7..52
      TypeCast@7..37
        AConst@7..17
          Sconst@7..17 "'{[4,50)}'"
        Typecast@17..19 "::"
        TypeName@19..37
          Ident@19..37 "mydomainmultirange"
      Whitespace@37..38 " "
      Op@38..40 "@>"
      Whitespace@40..41 " "
      TypeCast@41..52
        AConst@41..42
          Iconst@41..42 "7"
        Typecast@42..44 "::"
        TypeName@44..52
          Ident@44..52 "mydomain"
  Ascii59@52..53 ";"

