crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@51.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select textmultirange(textrange('\\\\\\\\', repeat('a', 200)), textrange('c', 'd'));"
---
SelectStmt@0..80
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..77
    FuncCall@7..77
      Ident@7..21 "textmultirange"
      Ascii40@21..22 "("
      FuncCall@22..55
        Ident@22..31 "textrange"
        Ascii40@31..32 "("
        AConst@32..38
          Sconst@32..38 "'\\\\\\\\'"
        Ascii44@38..39 ","
        Whitespace@39..40 " "
        FuncCall@40..55
          Ident@40..46 "repeat"
          Ascii40@46..47 "("
          AConst@47..50
            Sconst@47..50 "'a'"
          Ascii44@50..51 ","
          Whitespace@51..52 " "
          AConst@52..55
            Iconst@52..55 "200"
      Ascii41@55..56 ")"
      Ascii41@56..57 ")"
      Ascii44@57..58 ","
      Whitespace@58..59 " "
      FuncCall@59..77
        Ident@59..68 "textrange"
        Ascii40@68..69 "("
        AConst@69..72
          Sconst@69..72 "'c'"
        Ascii44@72..73 ","
        Whitespace@73..74 " "
        AConst@74..77
          Sconst@74..77 "'d'"
  Ascii41@77..78 ")"
  Ascii41@78..79 ")"
  Ascii59@79..80 ";"

