crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@511.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{[4,5)}'::restrictedmultirange @> 7;"
---
SelectStmt@0..44
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..43
    AExpr@7..43
      TypeCast@7..38
        AConst@7..16
          Sconst@7..16 "'{[4,5)}'"
        Typecast@16..18 "::"
        TypeName@18..38
          Ident@18..38 "restrictedmultirange"
      Whitespace@38..39 " "
      Op@39..41 "@>"
      Whitespace@41..42 " "
      AConst@42..43
        Iconst@42..43 "7"
  Ascii59@43..44 ";"

