crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@512.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{[4,50)}'::restrictedmultirange @> 7;"
---
SelectStmt@0..45
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    AExpr@7..44
      TypeCast@7..39
        AConst@7..17
          Sconst@7..17 "'{[4,50)}'"
        Typecast@17..19 "::"
        TypeName@19..39
          Ident@19..39 "restrictedmultirange"
      Whitespace@39..40 " "
      Op@40..42 "@>"
      Whitespace@42..43 " "
      AConst@43..44
        Iconst@43..44 "7"
  Ascii59@44..45 ";"

