crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@515.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select intr_multirange(intr(1,10));"
---
SelectStmt@0..35
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..32
    FuncCall@7..32
      Ident@7..22 "intr_multirange"
      Ascii40@22..23 "("
      FuncCall@23..32
        Ident@23..27 "intr"
        Ascii40@27..28 "("
        AConst@28..29
          Iconst@28..29 "1"
        Ascii44@29..30 ","
        AConst@30..32
          Iconst@30..32 "10"
  Ascii41@32..33 ")"
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

